<resources>
    <string name="app_name">homevork_ConstraintLayout_calculator_1</string>
    <string name="title_activity_two">ActivityTwo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_activityTwo">Это Второе Activity</string>
    <string name="button_return">Возврат</string>

    <string name="material_light">Material light</string>
    <string name="material_light_action_bar_dark">Material Light Action Bar Dark</string>
    <string name="my_cool_style">My Cool Style</string>
    <string name="material_dark">Material Dark</string>
</resources>